--- a/tutorial/angular.json
+++ b/tutorial/angular.json
@@ -31,6 +31,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/unir-dar-act2/tutorial/dist/tutorial/browser/",
               "budgets": [
                 {
                   "type": "initial",
